# CryptoMan

./: Cargo.toml  assemble-msvc.bat  build.rs
components/: app.slint
src/: main.rs
